# reference-extraction

./: Makefile  README.md  pyproject.toml
.github/workflows/: packaging.yml
notebooks/: data-generator-demo.ipynb
src/data_generators/clustering/: __init__.py  _adt.py  _sequential_tabular.py
src/data_generators/tabular/: __init__.py  _split_table.py
src/matchescu/data_generators/: ground_truth.py  typing.py
src/matchescu/data_generators/tables/: __init__.py  _split_table.py
src/matchescu/data_sources/: __init__.py  _csv.py  _list.py  _record.py
src/matchescu/extraction/: __init__.py  _base.py  _basic.py  _traits.py
src/matchescu/extraction/csv/: __init__.py  _extraction.py  _file.py
tests/: conftest.py
tests/data/: test.csv
tests/data_generators/clustering/: test_stepwise_clustered_list_of_tables.py
tests/data_generators/tabular/: test_basic_split_table.py
tests/matchescu/data_sources/: test_csv.py  test_data_record.py
tests/matchescu/extraction/: conftest.py  test_csv.py  test_record_extraction.py
tests/matchescu/extraction/csv/: test_extraction.py  test_file.py
