[tool.poetry]
name = "data-generators"
version = "0.1.0"
description = "Data generation pipeline for the Matchescu entity resolution analysis framework"
authors = ["Andrei Olar <andrei.olar@samlex.ro>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_generators"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
ipykernel = "^6.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
