[tool.poetry]
name = "data-generators"
version = "0.1.0"
description = "Data generation pipeline for the Matchescu entity resolution analysis framework"
authors = ["Andrei Olar <andrei.olar@samlex.ro>"]
license = "MIT"
readme = "README.md"
packages = [
    {include="matchescu", from="src"}
]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
ipykernel = "^6.21.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
